--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,13 @@ language = "en"
 multilingual = false
 src = "src"
 title = "M4n5ter Blog"
+
+[output.html]
+additional-css = ["theme/style3.css"]
+additional-js = ["assets/custom.js", "assets/bigPicture.js"]
+git-repository-url = "https://github.com/m4n5ter/m4n5ter.github.io"
+edit-url-template = "https://github.com/sunface/m4n5ter.github.io/edit/main/{path}"
+
+[output.html.fold]
+enable = true
+level = 1
