--- a/book.toml
+++ b/book.toml
@@ -13,3 +13,7 @@ edit-url-template = "https://github.com/sunface/m4n5ter.github.io/edit/main/{pat
 [output.html.fold]
 enable = true
 level = 1
+
+[output.katex]
+
+[preprocessor.katex]
