--- a/book.toml
+++ b/book.toml
@@ -14,6 +14,6 @@ edit-url-template = "https://github.com/m4n5ter/m4n5ter.github.io/edit/main/{pat
 enable = true
 level = 1
 
-[output.katex]
+# [output.katex]
 
-[preprocessor.katex]
+# [preprocessor.katex]
